# smart-file-search

./: .env.example  .env.web  .gitignore  =1.3.0  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  deploy-gitops.sh  docker-compose.web.yml  index_sample_data.bat  pyproject.toml  requirements.txt  run_native.bat  search_test.bat  test_ai_integration.py
config/: logging.yaml  settings.yaml  token_limits.env
docker/: Dockerfile.mcp  docker-compose.yaml
docs/: AI-INTEGRATION-COMPLETE.md  CLEANUP-REPORT.md  DEPLOYMENT.md  DOCUMENTATION-ORGANIZATION.md  GITOPS-READY.md  ai-features.md  api.md  architecture.md  mcp_tools.md  token-minimization.md  ui-mockup-interactive.html  ui-mockup.md  web-deployment.md
k8s/: argocd-application.yaml  configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
llm/: client.py  utils.py
llm/prompt_templates/: query_rewrite.txt  summarization.txt
mcp_server/: config.py  server.py  utils.py
mcp_server/tools/: index_tool.py  open_file_tool.py  search_tool.py  summarize_tool.py
sample_data/: api_config.json  data_analysis.py  documentation.md  product_catalog.csv
scripts/: run_index.sh  run_stack.sh  start_all.bat  start_backend.bat  start_frontend.bat
search_agent/: __init__.py  ai_enhancer.py  cli.py  config.py  extractor.py  indexer.py  network_indexer.py  schema.sql  search.py  simple_search.py
tests/: test_indexer.py  test_search.py
ui/backend/: api.py  api_network.py  api_network_main.py  config.py  security.py  utils.py
ui/frontend/: index.html  package.json  vite.config.ts
ui/frontend/src/: App.css  App.tsx  index.css
ui/frontend/src/components/: NetworkFolderInput.css  NetworkFolderInput.tsx  SearchInterface.css  SearchInterface.tsx
